--- a/README.pod
+++ b/README.pod
@@ -25,7 +25,15 @@ start twitter stream
 
 =item B<--help|-h>
 
-Print brief help message and exit
+show help message
+
+=item B<--view|-v>
+
+view class(default growl)
+
+=item B<--filter|-f>
+
+filter class(default none)
 
 =head1 AUTHOR
 
